test/files/neg/macro-overload-typemacros.check
Macros_Test_2.scala:5: error: Foo is already defined as macro type Foo
  type Foo = Int
       ^
one error found
